--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,9 +12,9 @@ jobs:
     
     services:
       postgres:
-        image: postgres:13
+        image: postgres:15
         env:
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_PASSWORD: password
           POSTGRES_DB: weather_forecast_test
         options: >-
           --health-cmd pg_isready
@@ -25,7 +25,7 @@ jobs:
           - 5432:5432
       
       redis:
-        image: redis:6
+        image: redis:7
         options: >-
           --health-cmd "redis-cli ping"
           --health-interval 10s
@@ -35,69 +35,81 @@ jobs:
           - 6379:6379
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 3.0
+        ruby-version: 3.1
         bundler-cache: true
     
-    - name: Set up database
+    - name: Set up test database
       run: |
+        cp .env.example .env
         bundle exec rails db:create
         bundle exec rails db:migrate
-    
-    - name: Run tests
-      run: bundle exec rspec
       env:
-        OPENWEATHER_API_KEY: test_key
+        DATABASE_URL: postgresql://postgres:password@localhost:5432/weather_forecast_test
         REDIS_URL: redis://localhost:6379/0
         RAILS_ENV: test
     
     - name: Run RuboCop
       run: bundle exec rubocop
     
-    - name: Run Brakeman
-      run: bundle exec brakeman --no-pager
+    - name: Run RSpec tests
+      run: bundle exec rspec
+      env:
+        DATABASE_URL: postgresql://postgres:password@localhost:5432/weather_forecast_test
+        REDIS_URL: redis://localhost:6379/0
+        RAILS_ENV: test
+        OPENWEATHER_API_KEY: test_key
+    
+    - name: Run security audit
+      run: bundle exec bundle audit --update
+    
+    - name: Generate coverage report
+      run: |
+        bundle exec rspec --format RspecJunitFormatter --out rspec.xml
+        bundle exec rspec --format progress --format RspecJunitFormatter --out rspec.xml
+      env:
+        DATABASE_URL: postgresql://postgres:password@localhost:5432/weather_forecast_test
+        REDIS_URL: redis://localhost:6379/0
+        RAILS_ENV: test
+        OPENWEATHER_API_KEY: test_key
+
+  docker:
+    runs-on: ubuntu-latest
+    needs: test
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Build Docker image
+      run: |
+        docker build -t weather-forecast:latest .
+    
+    - name: Test Docker image
+      run: |
+        docker run --rm -d --name weather-test -p 3000:3000 weather-forecast:latest
+        sleep 30
+        curl -f http://localhost:3000/api/v1/health || exit 1
+        docker stop weather-test
 
   security:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
-    - name: Set up Ruby
-      uses: ruby/setup-ruby@v1
+    - name: Run Trivy vulnerability scanner
+      uses: aquasecurity/trivy-action@master
       with:
-        ruby-version: 3.0
-        bundler-cache: true
+        scan-type: 'fs'
+        scan-ref: '.'
+        format: 'sarif'
+        output: 'trivy-results.sarif'
     
-    - name: Run security audit
-      run: bundle audit --update
-    
-    - name: Run Brakeman security scan
-      run: bundle exec brakeman --no-pager
-
-  build:
-    runs-on: ubuntu-latest
-    needs: [test, security]
-    if: github.ref == 'refs/heads/main'
-    
-    steps:
-    - uses: actions/checkout@v3
-    
-    - name: Set up Ruby
-      uses: ruby/setup-ruby@v1
+    - name: Upload Trivy scan results to GitHub Security tab
+      uses: github/codeql-action/upload-sarif@v2
       with:
-        ruby-version: 3.0
-        bundler-cache: true
-    
-    - name: Build Docker image
-      run: |
-        docker build -t weather-forecast:${{ github.sha }} .
-        docker tag weather-forecast:${{ github.sha }} weather-forecast:latest
-    
-    - name: Run container tests
-      run: |
-        docker run --rm weather-forecast:latest bundle exec rspec
+        sarif_file: 'trivy-results.sarif'
